Fixed member name alignment on email debug screen
refs. https://github.com/TryGhost/Team/issues/2327

- on the first two tabs of the email debug screen, the member email wasn't aligned properly when there was no name for a member

--- a/ghost/admin/app/styles/layouts/settings.css
+++ b/ghost/admin/app/styles/layouts/settings.css
@@ -3254,6 +3254,7 @@ p.theme-validation-details {
 .gh-email-debug-member {
     display: flex;
     flex-wrap: nowrap;
+    align-items: center;
 }
 
 .gh-email-debug-failure {
